cluster/k8s/agentplane-testing/dex/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agentplane-testing-dex
  namespace: agentplane-testing
spec:
  parentRefs:
    - name: cluster-gateway
      namespace: gateway-system
      sectionName: https-wildcard
  hostnames:
    - agentplane-dex-testing.allegedly.works
  rules:
    - filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: max-age=31536000
      backendRefs:
        - name: agentplane-testing-dex
          port: 5556
