cluster/k8s/agentplane-testing/dex/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: agentplane-testing-dex
  namespace: agentplane-testing
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: agentplane-testing-dex
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "5556"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: agentplane-testing
            app.kubernetes.io/name: agentplane-app
      toPorts:
        - ports:
            - port: "5556"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
  egressDeny:
    - toEntities:
        - all
